--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "bull": "^4.16.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "helmet": "^8.1.0",
     "ioredis": "^5.8.2",
     "mongoose": "^8.19.2",
     "reflect-metadata": "^0.2.2",
