Enhance environment configuration files: Add comments for clarity in .env and .env.local

--- a/.env
+++ b/.env
@@ -1,8 +1,13 @@
+# Application Configuration
 PORT=3000
 
+# Open Charge Map API Configuration
 OCM_API_URL=https://api.openchargemap.io/v3/poi
 OCM_API_KEY=ff82541f-c8d1-4507-be67-bd07e3259c4e
 
+# MongoDB Configuration
 MONGO_URI=mongodb://mongo:27017/jucr-poi-db
+
+# Redis Configuration
 REDIS_HOST=redis
 REDIS_PORT=6379
