--- a/.env.local
+++ b/.env.local
@@ -1,8 +1,15 @@
+# Environment variables for local development
+
+# Application settings
 PORT=3000
 
+# Open Charge Map API settings
 OCM_API_URL=https://api.openchargemap.io/v3/poi
 OCM_API_KEY=ff82541f-c8d1-4507-be67-bd07e3259c4e
 
+# MongoDB settings
 MONGO_URI=mongodb://localhost:27017/jucr-poi-db
+
+# Redis settings
 REDIS_HOST=localhost
 REDIS_PORT=6379
